@@ -7,6 +7,7 @@ Date: 00. 00. 0000
     -
   Bugfixes:
     - Fixed an issue where Request Depots from Klonan's Transport Drones could not be selected a product (Thanks MCP!)
+    - Fixed that the Deep Storage Unit mod's internal recipes were not being hidden
 
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.20
